Fixed HUNO-434: Alignment issue in prescriptions tab in patient side

--- a/src/patient/styles/report_card.scss
+++ b/src/patient/styles/report_card.scss
@@ -79,3 +79,11 @@
       width: 350px !important;
     }
   }
+  
+  @media  only screen and (min-width: 1280px) {
+    .MuiGrid-grid-lg-4 {
+      flex-grow: 0;
+      max-width: none !important;
+      flex-basis: 33.333333%;
+    }
+  }
